@@ -306,6 +306,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       declaration for set_debug ().
     - res/sound: add startup.wav sound to be played back when starting the PA
       daemon in debug mode.
+    - src/pulsemanager.cpp: don't time out while trying to start PA or paplay.
+      "Handle" errors by printing out debug messages.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
